--- a/sitios/inicio/inicio.html
+++ b/sitios/inicio/inicio.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>nosotros</title>
+<title>Inicio</title>
+<meta name="description" content="Todo en calzado para damas. zapatos bajos, zapatos altos, sandalias, zapato cerrados, zapatos de tacos, baletas, skiper, zapatos, shoes, pisos" />
+<meta name="keywords" content="zapatos bajos, zapatos altos, sandalias, zapato cerrados, zapatos de tacos, baletas, skiper, zapatos, shoes, pisos" />
 <link href="../../css/misestilos.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -11,7 +13,7 @@
       <header id="cabecera">
          <div id="logo">
          <figure>
-             <a href="../inicio/inicio.html"><img  alt="logo" title="logo"  src="../../images/logojeison.png"></a>
+             <a href="#"><img  alt="logo" title="logo" src="../../images/logojeison.png"></a>
          </figure>
          </div>
          <div id="redes">
@@ -29,20 +31,20 @@
       <div class="nav" id="menu">
             <ul class="nav">
             <li> <a href="../productos/productos.html">productos</a></li>
-            <li> <a href="#">nosotros</a></li>
+            <li> <a href="../nosotros/nosotros.html">nosotros</a></li>
             <li><a href="../trabajeconnosotros/trabajeconnosotros.html"> trabaje con nosotros</a></li>
             <li> <a href="../contactenos/contactenos.html">contactenos</a></li>
          </ul>
          </div>
          
       <section id="section">
-	    <article id="article100">
-         <div id="articlea">
+         <article id="article100">
+           <div id="articlea">
              <figure>
                  <img alt="ab" title="ab" src="../../images/ab.jpg" >
              </figure>
-         </div>
-         <div id="articleb">
+           </div>
+           <div id="articleb">
              <div id="wowslider-container1">
 	             <div class="ws_images">
 				    <ul>
@@ -53,8 +55,8 @@
                     </ul>
 			     </div>
 	          </div>	
-         </div>
-		</article>
+           </div>
+         </article>
          <article id="article1">
             <a id="texto105"> Algunos de nuestros productos </a>
          </article>
@@ -65,32 +67,6 @@
                <img alt="blt-1" title="blt-1" src="../../images/skp-1.jpg">
                <img alt="blt-4" title="blt-4" src="../../images/skp-4.jpg">
             </figure>
-         </article>
-         <article id="article5">
-            <div id="panelnosotros">
-                <p class="texto2"> La empresa </p> <hr><br>
-				 <p class="texto3"> Calzado lofer se creo el 20 de febrero de 2005 por el reconocido Sr. Luis Lopez y por el Sr. Edgar Fernandez ambos pioneros 
-				 en la rama del calzado en Guayaquil, que empezaron esta labor desde muy jovenes, y atreves del tiempo se perfeccionaron obteniendo 
-				 reconocimiento en la feria del calzado de las siguientes ciudades Cuenca, Ambato, Quito, Esmeraldas y Manabi. <br>
-				 Siendo premiados por los alcaldes de cada ciudad, entregandole una medalla por la exposicion del calzado por su arte y la maestria 
-				 que obtuvieron la mas alta calificacion por parte de los jueces calificadores que estuvieron integrado por maestros graduados en la 
-				 zapateria.<br>
-                 Su finalidad es ofrecerle a sus distinguidos clientes productos de cuero y sintetico confeccionado a mano y en maquina. Durante 
-				 todo este tiempo se ha caracterizado por su calidad y privilegio en cada uno de sus modelos.<p> <br>
-				 <p class="texto2">Mision </p><hr><br><br>
-				 <p class="texto3"> La mision de la empresa es ofrecer calzado hecho con cueros y materiales sinteticos de calidad. La elaboracion de cada uno de
-				 nuestros productos es a mano y en maquinas especializadas para cada trabajo; para asiacute poder superar las expectativas de cada uno de
-				 nuestros clientes, en relacion a sus gustos mas exclusivo, atraves de la excelencia de nuestros servicios, la experiencia y la 
-				 integridad. </p><br><br>
-				 <p class="texto2"> Vision <p><hr><br>
-				 <p class="texto3"> La vision, es generar ventajas competitivas atraves de mejorar e innovaciones de los productos, diseños actualizados, con procesos 
-				 de trabajos vigentes y enfocados a la innovacion; con personal altamente calificado y facultado para ejercer sus labores con plena 
-				 libertad y responsabilidad. </p><br><br>
-				 <p class="texto2"> Metas </p><hr><br>
-				 <p class="texto3"> Las metas de calzado lofer es vender nuestros productos a nivel nacional e internacional, que lo puedan conocer por su calidad y 
-				 prestigios ya que manos ecuatorianas elaboran este calzado y es reconocido por los ecuatorianos y extranjeros por su distinguida labor 
-				 y autenticidad en cada uno de los modelos y ademas se puede demostrar que en el Ecuador tambien tenemos una excelente mano de obra. </p><br><br>
-            </div>
          </article>
       </section>
       
