--- a/sitios/index.html
+++ b/sitios/index.html
@@ -38,7 +38,7 @@
          </article>
         </section>
         <footer id="footerinicio">
-          <a id="boton" href="sitios/inicio/inicio.html"> Ingresar </a>
+          <a id="boton" href="sitios/inicio.html"> Ingresar </a>
         </footer>
    </div>
 </body>
