--- a/sitios/productos/coleccionsandalia/coleccionsandalia.html
+++ b/sitios/productos/coleccionsandalia/coleccionsandalia.html
@@ -11,7 +11,7 @@
       <header id="cabecera">
          <div id="logo">
          <figure>
-             <a href="../../inicio.html"><img  alt="logo" title="logo" src="../../../images/logojeison.png"></a>
+             <a href="../../inicio/inicio.html"><img  alt="logo" title="logo" src="../../../images/logojeison.png"></a>
          </figure>
          </div>
          <div id="redes">
@@ -34,12 +34,13 @@
          </ul>
          </div>
       <section id="section">
-         <article id="articlea">
+	    <article id="article100">
+         <div id="articlea">
              <figure>
                  <img alt="ab" title="ab" src="../../../images/ab.jpg" >
              </figure>
-         </article>
-         <article id="articleb">
+         </div>
+         <div id="articleb">
              <div id="wowslider-container1">
 	             <div class="ws_images">
 				    <ul>
@@ -50,9 +51,10 @@
                     </ul>
 			     </div>
 	          </div>	
-         </article>
+         </div>
+		</article>
          <article id="article1">
-            <h2> Coleccion de Sandalias </h2>
+            <a id="texto105"> Coleccion de Sandalias </a>
          </article>
          <article id="article16">
 			   <figure>
