--- a/sitios/productos/productos.html
+++ b/sitios/productos/productos.html
@@ -13,7 +13,7 @@
       <header id="cabecera">
          <div id="logo">
          <figure>
-             <a href="../inicio.html"><img alt="logo" title="logo" src="../../images/logojeison.png"></a>
+             <a href="../inicio/inicio.html"><img alt="logo" title="logo" src="../../images/logojeison.png"></a>
          </figure>
          </div>
          <div id="redes">
@@ -36,12 +36,13 @@
          </ul>
          </div>
       <section id="section">
-         <article id="articlea">
+        <article id="article100">
+         <div id="articlea">
              <figure>
                  <img alt="ab" title="ab" src="../../images/ab.jpg" >
              </figure>
-         </article>
-         <article id="articleb">
+         </div>
+         <div id="articleb">
              <div id="wowslider-container1">
 	             <div class="ws_images">
 				    <ul>
@@ -52,9 +53,10 @@
                     </ul>
 			     </div>
 	          </div>	
+         </div>
          </article>
          <article id="article1">
-            <h2> Colecciones </h2>
+            <a id="texto105"> Colecciones </a>
          </article>
 		   <article id="article13">
 			   <figure>
@@ -64,7 +66,7 @@
 		       </figure>
 			</article>
             <article id="article40">
-            <h5> Productos </h5>
+            <a id="texto105"> Productos </a>
          </article>
 			<article id="article41">
 			   <figure>
